  _DBId int(11) default 0,
  _ClassName VARCHAR(255) DEFAULT NULL,
  _Name INT(11) NOT NULL DEFAULT '0',
  _SupplierReference VARCHAR(255) DEFAULT NULL,
  PRIMARY KEY (_Id)
) TYPE=InnoDB CHARSET=latin1;

--
-- Table structure for rTWModelRTWSize
--
DROP TABLE IF EXISTS rTWModelRTWSize;
CREATE TABLE rTWModelRTWSize (
  _ToRTWSize int(11) unsigned NOT NULL default '0',
  _FromRTWModel int(11) unsigned NOT NULL default '0',
  PRIMARY KEY (_ToRTWSize, _FromRTWModel)
) TYPE=InnoDB CHARSET=latin1;

# nettoyage properties/catalogues
delete from CatalogCriteria where _Property not in (select _Id from Property);

# modif chaines
ALTER TABLE Chain ADD COLUMN _AutoAssignTo INT(3) NOT NULL DEFAULT 0;

# modif prix

ALTER TABLE PriceByCurrency ADD COLUMN 
    _RecommendedPrice DECIMAL(10,2) NOT NULL DEFAULT 0 AFTER _DBId;
ALTER TABLE PriceByCurrency ADD COLUMN 
    _PricingZone INT(11) NOT NULL DEFAULT 0;
CREATE INDEX _PricingZone ON PriceByCurrency (_PricingZone);
ALTER TABLE Actor ADD COLUMN 
    _PricingZone INT(11) NOT NULL DEFAULT 0 AFTER _Currency;
CREATE INDEX _PricingZone ON Actor (_PricingZone);

DROP TABLE IF EXISTS PricingZone;
CREATE TABLE PricingZone (
  _Id int(11) unsigned NOT NULL default 0,
  _DBId int(11) default 0,
  _Name VARCHAR(255) DEFAULT NULL,
  PRIMARY KEY (_Id)
) TYPE=InnoDB CHARSET=latin1;

# ajout polonais
ALTER TABLE I18nString ADD _StringValue_pl_PL TEXT DEFAULT NULL;

# modif composant
ALTER TABLE Component ADD _PercentWasted DECIMAL(10,2) NOT NULL DEFAULT 0 AFTER _Quantity;

# Table structure for ContactRole
DROP TABLE IF EXISTS ContactRole;
CREATE TABLE ContactRole (
  _Id int(11) unsigned NOT NULL default 0,
  _DBId int(11) default 0,
  _Name VARCHAR(255) DEFAULT NULL,
  PRIMARY KEY (_Id)
) TYPE=InnoDB CHARSET=latin1;

ALTER TABLE Contact DROP COLUMN _Fonction;
ALTER TABLE Contact ADD _Role INT(11) NOT NULL DEFAULT 0;

####################################
# Ne pas enlever
COMMIT;
####################################